add get user by id handler
