# user/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/auth/csrf": {
+        "/user/csrf": {
             "get": {
                 "description": "Get csrf token, required session",
                 "consumes": [
@@ -21,7 +21,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/user/login": {
             "post": {
                 "description": "login user, returns user data and session",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/auth/logout": {
+        "/user/logout": {
             "post": {
                 "description": "Logout user, return no content",
                 "consumes": [
@@ -69,7 +69,7 @@
                 }
             }
         },
-        "/auth/me": {
+        "/user/me": {
             "get": {
                 "description": "Get current user data, required session cookie",
                 "consumes": [
@@ -89,7 +89,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/user/register": {
             "post": {
                 "description": "register new user account, returns user data and session",
                 "consumes": [
@@ -113,6 +113,35 @@
                 "responses": {
                     "201": {
                         "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "description": "Get user data by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get user by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.UserResponse"
                         }
